Ajustement varié : responsive -résolution photos - hover header-footer

--- a/vivreici.html
+++ b/vivreici.html
@@ -24,16 +24,16 @@
                     </a>
                     <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
                         <li>
-                            <a href="loisirs.html" class="nav-link text-white ">
-                                <i class="bi bi-tree-fill bi d-block mx-auto mb-1 fs-2 text-center " width="24" height="24"
-                                    aria-hidden="true">
+                            <a href="vivreici.html" class="nav-link text-white ">
+                                <i class="bi bi-tree-fill bi d-block mx-auto mb-1 fs-2 text-center " width="24"
+                                    height="24" aria-hidden="true">
                                 </i>Socioculturelle</a>
                         </li>
                         <li>
                             <a href="https://www.ville.daveluyville.qc.ca/demandes-de-permis"
                                 class="nav-link text-white">
-                                <i class="bi bi-houses-fill bi d-block mx-auto mb-1 fs-2 text-center " width="24" height="24"
-                                    aria-hidden="true">
+                                <i class="bi bi-houses-fill bi d-block mx-auto mb-1 fs-2 text-center " width="24"
+                                    height="24" aria-hidden="true">
 
                                 </i>
                                 Citoyens
@@ -69,17 +69,97 @@
         <div class="nav-scroller py-1 mb-3 border-bottom">
             <nav class="container container nav nav-underline justify-content-between">
                 <a class="nav-item nav-link link-body-emphasis" href="vivreici.html">Vivre ici !</a>
-                <a class="nav-item nav-link link-body-emphasis" href="https://www.ville.daveluyville.qc.ca/avis-publics">Avis Public</a>
-                <a class="nav-item nav-link link-body-emphasis" href="https://www.ville.daveluyville.qc.ca/projets-de-reglements">Scéance du conseil</a>
-                <a class="nav-item nav-link link-body-emphasis" href="https://www.ville.daveluyville.qc.ca/projets-de-reglements">Règlements et permis</a>
-                <a class="nav-item nav-link link-body-emphasis" href="https://www.ville.daveluyville.qc.ca/parc-industriel">Entreprises</a>
-                <a class="nav-item nav-link link-body-emphasis" href="https://www.ville.daveluyville.qc.ca/le-causeur-en-ligne"> Journal Le causeur</a>
+                <a class="nav-item nav-link link-body-emphasis"
+                    href="https://www.ville.daveluyville.qc.ca/avis-publics">Avis Public</a>
+                <a class="nav-item nav-link link-body-emphasis"
+                    href="https://www.ville.daveluyville.qc.ca/projets-de-reglements">Scéance du conseil</a>
+                <a class="nav-item nav-link link-body-emphasis"
+                    href="https://www.ville.daveluyville.qc.ca/projets-de-reglements">Règlements et permis</a>
+                <a class="nav-item nav-link link-body-emphasis"
+                    href="https://www.ville.daveluyville.qc.ca/parc-industriel">Entreprises</a>
+                <a class="nav-item nav-link link-body-emphasis"
+                    href="https://www.ville.daveluyville.qc.ca/le-causeur-en-ligne"> Journal Le causeur</a>
             </nav>
         </div>
 
     </header>
 
     <main>
+        <div class="col-md-2">
+            <!-- Off canva -menu-->
+            <button class="btn-onglets-vivre col-md-2  mb-3 row " type="button" data-bs-toggle="offcanvas"
+                data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"><i
+                    class="bi bi-phone bi d-block mx-auto mb-1 fs-2 text-start" width="24" height="24"
+                    aria-hidden="true">
+
+                </i></a>Nous joindre</button>
+
+            <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions"
+                aria-labelledby="offcanvasWithBothOptionsLabel">
+                <div class="offcanvas-header">
+                    <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">Backdrop with scrolling</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                    <p>Try scrolling the rest of the page to see this option in action.</p>
+                </div>
+            </div>
+
+
+            <button class=" btn-onglets-socio mb-3" type="button" data-bs-toggle="offcanvas"
+                data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">Enable both
+                scrolling &
+                backdrop</button>
+
+            <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions"
+                aria-labelledby="offcanvasWithBothOptionsLabel">
+                <div class="offcanvas-header">
+                    <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">Backdrop with scrolling</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                    <p>Try scrolling the rest of the page to see this option in action.</p>
+                </div>
+            </div>
+
+
+            <button class=" btn-onglets-cit mb-3" type="button" data-bs-toggle="offcanvas"
+                data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">Enable both
+                scrolling &
+                backdrop</button>
+
+            <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions"
+                aria-labelledby="offcanvasWithBothOptionsLabel">
+                <div class="offcanvas-header">
+                    <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">Backdrop with scrolling</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                    <p>Try scrolling the rest of the page to see this option in action.</p>
+                </div>
+            </div>
+
+
+            <button class=" btn-onglets-muni" type="button" data-bs-toggle="offcanvas"
+                data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">Enable both
+                scrolling &
+                backdrop</button>
+
+            <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions"
+                aria-labelledby="offcanvasWithBothOptionsLabel">
+                <div class="offcanvas-header">
+                    <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">Backdrop with scrolling</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                    <p>Try scrolling the rest of the page to see this option in action.</p>
+                </div>
+            </div>
+
+        </div>
+
+
+
         <section class=" container container-fluid mt-5">
             <h1 class="display-3">Vivre ici!</h1>
             <h3 class="display-6 fst-italic mt-4">Daveluyville se démarque </h3>
@@ -92,10 +172,12 @@
                         <div id="carousel1" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner carousel-vivre-inner rounded">
                                 <div class="carousel-item active">
-                                    <img src="Daveluyville-Images/daveluyville-2020-jasmin-lambert-02.jpg" class="d-block w-100 h-100">
+                                    <img src="Daveluyville-Images/daveluyville-2020-jasmin-lambert-02.jpg"
+                                        class="d-block w-100 h-100">
                                 </div>
                                 <div class="carousel-item active">
-                                    <img src="Daveluyville-Images/jeux_deau_-_parc_beaudoin.jpg" class="d-block w-100 h-100">
+                                    <img src="Daveluyville-Images/jeux_deau_-_parc_beaudoin.jpg"
+                                        class="d-block w-100 h-100">
                                 </div>
                                 <div class="carousel-item">
                                     <img src="Daveluyville-Images/parc-beaudoin-ete.jpg" class="d-block w-100 h-60">
@@ -248,66 +330,69 @@
 
     </div>
 
-    <footer class="py-4">
-        <div class="row m-4">
-            <div class="col-6 col-md-2 mb-3">
+    <footer class="py-4 text-white">
+        <div class="row m-4 text-white">
+            <div class="col-6 col-md-2 mb-3 ">
 
                 <ul class="nav flex-column">
-                    <li class="nav-item mb-2">
-                        <a href="#" class="nav-link p-0 text-body-secondary">Loisirs</a>
+                    <li class="nav-item mb-2 nav-item-footer">
+                        <a href="loisirs.html" class="nav-link p-0 text-white">Loisirs</a>
                     </li>
-                    <li class="nav-item mb-2">
-                        <a href="#" class="nav-link p-0 text-body-secondary">Citoyens</a>
+                    <li class="nav-item mb-2 nav-item-footer">
+                        <a href="https://www.ville.daveluyville.qc.ca/aide-a-l-emploi-et-demarrage-d-entreprise"
+                            class="nav-link p-0 text-white">Citoyens</a>
                     </li>
-                    <li class="nav-item mb-2">
-                        <a href="#" class="nav-link p-0 text-body-secondary">Municipalités</a>
+                    <li class="nav-item mb-2 nav-item-footer">
+                        <a href="municipalite.html" class="nav-link p-0 text-white">Municipalités</a>
                     </li>
-                    <li class="nav-item mb-2">
-                        <a href="#" class="nav-link p-0 text-body-secondary">Entreprises</a>
+                    <li class="nav-item mb-2 nav-item-footer ">
+                        <a href="https://www.ville.daveluyville.qc.ca/aide-a-l-emploi-et-demarrage-d-entreprise"
+                            class="nav-link p-0 text-white">Économies</a>
                     </li>
                 </ul>
             </div>
             <div class="col-6 col-md-2 mb-2">
 
                 <ul class="nav flex-column">
-                    <li class="nav-item mb-2">
-                        <a href="#" class="nav-link p-0 text-body-secondary">Application GESTRIO</a>
+                    <li class="nav-item mb-2 nav-item-footer">
+                        <a href="#" class="nav-link p-0 text-white">Application GESTRIO</a>
                     </li>
-                    <li class="nav-item mb-2">
-                        <a href="#" class="nav-link p-0 text-body-secondary">Programme vidange fosses septiques</a>
+                    <li class="nav-item mb-2 nav-item-footer">
+                        <a href="#" class="nav-link p-0 text-white">Programme fosses septiques</a>
                     </li>
-                    <li class="nav-item mb-2">
-                        <a href="#" class="nav-link p-0 text-body-secondary">Avis public</a>
+                    <li class="nav-item mb-2 nav-item-footer ">
+                        <a href="#" class="nav-link p-0 text-white">Avis public</a>
                     </li>
-                    <li class="nav-item mb-2">
-                        <a href="#" class="nav-link p-0 text-body-secondary">Offre d'emplois</a>
+                    <li class="nav-item mb-2 nav-item-footer ">
+                        <a href="#" class="nav-link p-0 text-white">Offre d'emplois</a>
                     </li>
-                    <li class="nav-item mb-2">
-                        <a href="#" class="nav-link p-0 text-body-secondary">Histoire de la ville</a>
+                    <li class="nav-item mb-2 nav-item-footer">
+                        <a href="https://histoire-du-quebec.ca/daveluyville/" class="nav-link p-0 text-white">Histoire
+                            de la ville</a>
                     </li>
                 </ul>
             </div>
 
             <div class="col-md-5 offset-md-1 mb-3">
-                <ul class="nav flex-row">
-                    <li class="nav-item mb-2">
-                        <img src="Daveluyville-Images/MatriceMRC.jpg" alt=" accès Matrice MRC">
-                    </li>
-                    <li class="nav-item  ms-5">
-                        <img src="Daveluyville-Images/victoetsaregion.png" alt="accès Victo et sa région">
-                    </li>
-                    <li class="nav-item  ms-5">
-                        <a href="https://daveluyville.appvoila.com/fr/">
-                            <img src="Daveluyville-Images/logo-voila-davel.png" alt="accès Portail Voilà"></a>
-                    </li>
-                </ul>
+                <div class="d-flex align-items-center gap-3 justify-content-start footer-logos">
+                    <a href="http://">
+                        <img class="img-fluid" src="Daveluyville-Images/MatriceMRC.jpg" alt=" accès Matrice MRC">
+                    </a>
+                    <a href="http://">
+                        <img class="img-fluid" src="Daveluyville-Images/victoetsaregion.png"
+                            alt="accès Victo et sa région">
+                    </a>
 
+                    <a href="https://daveluyville.appvoila.com/fr/">
+                        <img class="img-fluid" src="Daveluyville-Images/logo-voila-davel.png"
+                            alt="accès Portail Voilà"></a>
+                </div>
             </div>
         </div>
         <div class="d-flex flex-column flex-sm-row justify-content-between py-2 border-top">
             <p class="p-3">&copy; 2025 Company, Inc. All rights reserved.</p>
-
         </div>
+
 
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
