--- a/municipalite.html
+++ b/municipalite.html
@@ -12,11 +12,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css  ">
 </head>
-
+ 
 <body>
-    <header>
+    <header class="municipalite">
         <div class="border-bottom">
-            <div class="header-bg">
+            <div class="bg-municipalite">
                 <div class="d-flex align-items-center justify-content-center justify-content-lg-center pt-3 ">
                     <a href="acceuil.html"
                         class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
@@ -95,9 +95,11 @@
                     <div class="row">
                         <!-- INFOS 1-->
                         <div class="col-lg-4 align-items-center text-center">
-                            <svg aria-label="Placeholder" class="bd-placeholder-img rounded-circle" height="140"
+                            
+                             <img src="Daveluyville-Images/salle-conseil.jfif" alt="" aria-label="Placeholder" class="bd-placeholder-img rounded-circle" height="140"
                                 preserveAspectRatio="xMidYMid slice" role="img" width="140"
                                 xmlns="http://www.w3.org/2000/svg">
+                               
                                 <rect width="100%" height="100%" fill=""></rect>
                             </svg>
                             <h3 class="fw-normal">Scéance du conseil</h3>
@@ -110,12 +112,12 @@
                         </div>
                         <!-- INFOS 2-->
                         <div class="col-lg-4 align-items-center text-center ">
-                            <svg aria-label="Placeholder" class="bd-placeholder-img rounded-circle" height="140"
+                            <img src="Daveluyville-Images/image-avispublic.png" aria-label="Placeholder" class="bd-placeholder-img rounded-circle" height="140"
                                 preserveAspectRatio="xMidYMid slice" role="img" width="140"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <title>Placeholder</title>
                                 <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
-                            </svg>
+                        </img>
                             <h3 class="fw-normal">Avis Publics</h3>
                             <p>
                                 Consulter les avis publics <br> en cours et à venir.
@@ -126,12 +128,12 @@
                         </div>
                         <!-- INFOS 3 -->
                         <div class="col-lg-4 align-items-center text-center">
-                            <svg aria-label="Placeholder" class="bd-placeholder-img rounded-circle" height="140"
+                            <img src="Daveluyville-Images/image-projet.png" aria-label="Placeholder" class="bd-placeholder-img rounded-circle" height="140"
                                 preserveAspectRatio="xMidYMid slice" role="img" width="140"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <title>Placeholder</title>
                                 <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
-                            </svg>
+                        </img>
                             <h3 class="fw-normal">Projet et Règlements</h3>
                             <p>
                                 Dans cette section vous aurez accès aux différents projets <br> et règlements
@@ -260,48 +262,45 @@
     </main>
 
 
-    <footer class="py-4">
-        <div class="row m-4">
-            <div class="col-6 col-md-2 mb-3">
+      <footer class="py-4 text-white">
+        <div class="row m-4 text-white">
+            <div class="col-6 col-md-2 mb-3 ">
 
                 <ul class="nav flex-column">
-                    <li class="nav-item mb-2">
-                        <a href="loisirs.html" class="nav-link p-0 text-body-secondary">Loisirs</a>
+                    <li class="nav-item mb-2 nav-item-footer">
+                        <a href="loisirs.html" class="nav-link p-0 text-white">Loisirs</a>
                     </li>
-                    <li class="nav-item mb-2">
+                    <li class="nav-item mb-2 nav-item-footer">
                         <a href="https://www.ville.daveluyville.qc.ca/aide-a-l-emploi-et-demarrage-d-entreprise"
-                            class="nav-link p-0 text-body-secondary">Citoyens</a>
+                            class="nav-link p-0 text-white">Citoyens</a>
                     </li>
-                    <li class="nav-item mb-2">
-                        <a href="municipalite.html" class="nav-link p-0 text-body-secondary">Municipalités</a>
+                    <li class="nav-item mb-2 nav-item-footer">
+                        <a href="municipalite.html" class="nav-link p-0 text-white">Municipalités</a>
                     </li>
-                    <li class="nav-item mb-2">
+                    <li class="nav-item mb-2 nav-item-footer ">
                         <a href="https://www.ville.daveluyville.qc.ca/aide-a-l-emploi-et-demarrage-d-entreprise"
-                            class="nav-link p-0 text-body-secondary">Économies</a>
+                            class="nav-link p-0 text-white">Économies</a>
                     </li>
                 </ul>
             </div>
             <div class="col-6 col-md-2 mb-2">
 
                 <ul class="nav flex-column">
-                    <li class="nav-item mb-2">
-                        <a href="chrome-extension://efaidnbmnnnibpcajpcglclefindmkaj/https://www.ville.daveluyville.qc.ca/medias/doc/calendrier-daveluyville-web.pdf"
-                            class="nav-link p-0 text-body-secondary">Calendrier 2025</a>
+                    <li class="nav-item mb-2 nav-item-footer">
+                        <a href="#" class="nav-link p-0 text-white">Application GESTRIO</a>
                     </li>
-                    <li class="nav-item mb-2">
-                        <a href="https://www.ville.daveluyville.qc.ca/programme-de-vidange-de-fosses-septiques"
-                            class="nav-link p-0 text-body-secondary">Programme vidange fosses septiques</a>
+                    <li class="nav-item mb-2 nav-item-footer">
+                        <a href="#" class="nav-link p-0 text-white">Programme fosses septiques</a>
                     </li>
-                    <li class="nav-item mb-2">
-                        <a href="https://www.ville.daveluyville.qc.ca/avis-publics"
-                            class="nav-link p-0 text-body-secondary">Avis public</a>
+                    <li class="nav-item mb-2 nav-item-footer ">
+                        <a href="#" class="nav-link p-0 text-white">Avis public</a>
                     </li>
-                    <li class="nav-item mb-2">
-                        <a href="https://www.ville.daveluyville.qc.ca/articles/ouverture-de-poste-tresoriertresoriere"
-                            class="nav-link p-0 text-body-secondary">Offre d'emplois</a>
+                    <li class="nav-item mb-2 nav-item-footer ">
+                        <a href="#" class="nav-link p-0 text-white">Offre d'emplois</a>
                     </li>
-                    <li class="nav-item mb-2">
-                        <a href="#" class="nav-link p-0 text-body-secondary">Histoire de la ville</a>
+                    <li class="nav-item mb-2 nav-item-footer">
+                        <a href="https://histoire-du-quebec.ca/daveluyville/" class="nav-link p-0 text-white">Histoire
+                            de la ville</a>
                     </li>
                 </ul>
             </div>
@@ -309,28 +308,32 @@
             <div class="col-md-5 offset-md-1 mb-3">
                 <div class="d-flex align-items-center gap-3 justify-content-start footer-logos">
                     <a href="http://">
-                        <img src="Daveluyville-Images/MatriceMRC.jpg" alt=" accès Matrice MRC">
+                        <img class="img-fluid" src="Daveluyville-Images/MatriceMRC.jpg" alt=" accès Matrice MRC">
                     </a>
                     <a href="http://">
-                        <img src="Daveluyville-Images/victoetsaregion.png" alt="accès Victo et sa région">
+                        <img class="img-fluid" src="Daveluyville-Images/victoetsaregion.png"
+                            alt="accès Victo et sa région">
                     </a>
 
                     <a href="https://daveluyville.appvoila.com/fr/">
-                        <img src="Daveluyville-Images/logo-voila-davel.png" alt="accès Portail Voilà"></a>
+                        <img class="img-fluid" src="Daveluyville-Images/logo-voila-davel.png"
+                            alt="accès Portail Voilà"></a>
                 </div>
             </div>
         </div>
         <div class="d-flex flex-column flex-sm-row justify-content-between py-2 border-top">
             <p class="p-3">&copy; 2025 Company, Inc. All rights reserved.</p>
-
         </div>
+
+
+    </footer>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
             integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
             crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js"
             integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y"
             crossorigin="anonymous"></script>
-    </footer>
+
 
 
 </body>
